--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description"
+        content="Diamond Elite Baseball, Softball and Fitness is a comprehensive baseball, fastpitch, and slowpitch softball facility in Silverdale, WA, dedicated to providing top-notch training, equipment, and amenities for players of all ages and skill levels." />
+    <title>Diamond Elite Baseball, Softball and Fitness</title>
+
 </head>
+
 <body>
-    <h1>Hiking Spots in Kitsap County</h1>
-    <p>There are lots of lovely spots to take a hike in our county. Here are just a few</p>
+    <header>
+        <h1>Diamond Elite Baseball, Softball and Fitness</h1>
+        <h2>Elite Level Instruction for Top Notch Athletes from Experienced Instructors</h2>
+        <h3>Shannon has played baseball at multiple levels and offers hitting instruction used by todays stars</h3>
+        <img src="images/Navy Baseball.jpg" alt="Picture of Shannon playing baseball in Italy" width="250px">
+        <p>Shannon currently coaches travel baseball for the Gig Harbor Shockwave you can find them <a href="https://shockwavebaseballclub.com/">here.</a></p>
+    </header>
+    <main>
+        <section>
+            <!--Bullets of what our facility offers to our consumer.-->
+            <h1>WHAT WE DO</h1>
+            <ul>
+                <li>Hitting</li>
+                <li>Pitching</li>
+                <li>Fielding</li>
+                <li>Development</li>
+                <li>Batting Practice</li>
+                <li>Strength Coaching</li>
+                <li>Speed Coaching</li>
+            </ul>
+        </section>
+        <section>
+            <!--Bullets of the other things we do as a business.-->
+            <h2>Other services offered</h2>
+            <ol>
+                <li>Fitness Programming</li>
+                <li>Personal Training</li>
+                <li>Muscle Development Supplements</li>
+                <li>Pro Shop</li>
+                <li>Baseball Card Hobby Shop</li>
+            </ol>
+        </section>
+            <!--Discription of what we want to offer.-->
+            <p>A training center for all level athletes from beginner to elite level. We focus on the athlete, not the age
+            group. We wanted to bring the opportunity for all levels to come to a facility and train without the
+            pressures of judgement. A true facility for ANY player in the game.</p>
+            <q>You're gonna love the result.</q> -Shannon Schwartz (Founder)
+
+    </main>
+    <footer>
+        <p>&copy; Shannon Schwartz 2024</p>
+    </footer>
 </body>
+
 </html>
