update to mywebsite via instruction from mod 4

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <meta name="description"
         content="Diamond Elite Baseball, Softball and Fitness is a comprehensive baseball, fastpitch, and slowpitch softball facility in Silverdale, WA, dedicated to providing top-notch training, equipment, and amenities for players of all ages and skill levels." />
     <title>Diamond Elite Baseball, Softball and Fitness</title>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Diamond Elite Baseball, Softball and Fitness</h1>
-        <h2>Elite Level Instruction for Top Notch Athletes from Experienced Instructors</h2>
-        <h3>Shannon has played baseball at multiple levels and offers hitting instruction used by todays stars</h3>
-        <img src="images/Navy Baseball.jpg" alt="Picture of Shannon playing baseball in Italy" width="250px">
-        <p>Shannon currently coaches travel baseball for the Gig Harbor Shockwave you can find them <a href="https://shockwavebaseballclub.com/">here.</a></p>
+        <section id="title">
+            <h1 class="first_text">Diamond Elite Baseball, Softball and Fitness</h1>
+            <h2 class="first_text">Elite Level Instruction for Top Notch Athletes from Experienced Instructors</h2>
+            <h3 class="first_text">Shannon has played baseball at multiple levels and offers hitting instruction used by todays stars</h3>
+            <img src="images/Navy Baseball.jpg" alt="Picture of Shannon playing baseball in Italy" width="250px">
+            <p>Shannon currently coaches travel baseball for the Gig Harbor Shockwave you can find them <a href="https://shockwavebaseballclub.com/">here.</a></p>
+        </section>
     </header>
     <main>
-        <section>
+        <section id="what">
             <!--Bullets of what our facility offers to our consumer.-->
             <h1>WHAT WE DO</h1>
             <ul>
@@ -44,7 +46,7 @@
             </ol>
         </section>
             <!--Discription of what we want to offer.-->
-            <p>A training center for all level athletes from beginner to elite level. We focus on the athlete, not the age
+            <p>A training center for all level athletes from <em>beginner</em> to <em>elite</em> level. We focus on the athlete, not the age
             group. We wanted to bring the opportunity for all levels to come to a facility and train without the
             pressures of judgement. A true facility for ANY player in the game.</p>
             <q>You're gonna love the result.</q> -Shannon Schwartz (Founder)
