further updates for mod 4

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li>Speed Coaching</li>
             </ul>
         </section>
-        <section>
+        <section id="services">
             <!--Bullets of the other things we do as a business.-->
             <h2>Other services offered</h2>
             <ol>
